# jgfcv

./: README.md  dev.mjs  package.json
backend/: main.py  pyproject.toml
backend/src/agents/: analyst_agent.py  graph.py  research_agent.py  state.py  supervisor.py  writer_agent.py
backend/src/api/: documents.py  playground.py  system.py  workflows.py
backend/src/chains/: conditional.py  parallel.py  parsers.py  sequential.py
backend/src/core/: cache.py  config.py  errors.py  logging.py  observability.py  retry.py
backend/src/guardrails/: input_rails.py  output_rails.py
backend/src/llm/: client.py  embeddings.py
backend/src/memory/: chat_history.py
backend/src/rag/: loaders.py  pipeline.py  splitter.py  vectorstore.py
backend/src/schemas/: models.py
backend/tests/: test_core.py  test_graph.py  test_guardrails.py  test_rag.py
cheatsheets/: fastapi.md  langchain-lcel.md  langgraph.md  pydantic.md  rag.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FUTURE_IMPROVEMENTS.md  LEARNING_GUIDE.md  screenshot-mapping.md
docs/knowledge-base/: 01-prompts-and-chat-history.md  02-structured-outputs-and-parsers.md  03-chains-lcel.md  04-embeddings-and-similarity.md  05-rag.md  06-vector-stores.md  07-agents-langchain-vs-langgraph.md  08-guardrails.md  09-observability.md  10-ecosystem-tooling.md
docs/learning-guide/: agents-and-graphs.md  chains-and-parsers.md  rag-and-embeddings.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  (+2 more)
interview-notes/: best-practices.md  glossary.md  questions.md
(+16 files in other folders)
