[project]
name = "agentforge-backend"
version = "1.0.0"
description = "AgentForge - Multi-agent AI workflow platform backend (FastAPI + LangChain + LangGraph + Gemini)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
